--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,7 +1,24 @@
 /*
-white: #f7f9f9;
+white: ;
 light-blue: #2081c3;
-dark-blue: #0a2c42;
+dark-blue: ;
 grey: #bfbfbf;
-font-family: Arial, Helvetica, sans-serif;
+font-family: 
 */
+
+nav {
+    background-color: rgb(41, 124, 172) !important;
+    font-family:Arial, Helvetica, sans-serif ;
+}
+
+button {
+    background-color:#0a2c42;
+    color:#f7f9f9;
+    display: flex;
+    justify-content: center;
+}   
+
+img {
+    display: flex;
+    justify-content: center;
+}
