--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,7 @@
 <div>
-
+    <img class="beer-img" src="/images/beer.png">
+</div>
+<div>
+   <button type="button"><a href="/views/beers.hbs">Check the Beers!</a></button>
+   <button type="button"><a href="/views/randombeer.hbs">Check a Random Beer!</a></button>  
 </div>
